# crossterm-simple-event

./: Cargo.toml  LICENSE  readme.md
examples/: example.rs
src/: generate.sh  keybinds.rs  lib.rs
