[package]
name = "crossterm-simple-event"
version = "0.1.0"
edition = "2024"
authors = ["wyvernbw <calinpiros10@gmail.com>"]
license = "MIT"

[dependencies]
compact_str = "0.9.0"
crossterm = { version = "0.29.0", default-features = false, features = ["events"] }

[dev-dependencies]
ratatui = "0.30.0"
